Realizado el ejercicio 7 con FlexBox

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li><a href="ejercicio4.html">Ejercicio4</a></li>
           <li><a href="ejercicio5.html">Ejercicio5</a></li>
           <li><a href="ejercicio6.html">Ejercicio6</a></li>
+          <li><a href="ejercicio7.html">Ejercicio7</a></li>
         </ul>
       </nav>
     </main>
