Realizado el ejercicio 8

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <link rel="manifest" href="site.webmanifest" />
     <meta name="theme-color" content="#fafafa" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -40,6 +44,7 @@
           <li><a href="ejercicio5.html">Ejercicio5</a></li>
           <li><a href="ejercicio6.html">Ejercicio6</a></li>
           <li><a href="ejercicio7.html">Ejercicio7</a></li>
+          <li><a href="ejercicio8.html">Ejercicio8</a></li>
         </ul>
       </nav>
     </main>
