--- a/ejercicio7.html
+++ b/ejercicio7.html
@@ -25,7 +25,7 @@
     <meta name="theme-color" content="#fafafa" />
   </head>
 
-  <body>
+  <body class="ejercicio7">
     <section>
       <h1>Ejercicio 7</h1>
       <p><a href="index.html">Atras</a></p>
